--- a/index.html
+++ b/index.html
@@ -49,7 +49,105 @@
   </head>
   <body>
     <!-- header start -->
-    <header></header>
+    <header>
+      <!-- navbar section -->
+      <nav class="container mx-auto">
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+              >
+                <li class="font-semibold"><a>Home</a></li>
+                <li><a>Servies</a></li>
+                <li><a>Portfolio</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact us</a></li>
+              </ul>
+            </div>
+            <div class="flex items-center">
+              <img
+                src="assets/arrow-up.png"
+                class="w-5 h-5 bg-[#ABEF6F] rounded-full p-1 hidden md:inline-block"
+                alt=""
+              />
+
+              <a class="btn btn-ghost font-bold text-xl">Rinterio</a>
+            </div>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li class="font-semibold"><a>Home</a></li>
+              <li><a>Servies</a></li>
+              <li><a>Portfolio</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact us</a></li>
+            </ul>
+          </div>
+          <div class="navbar-end space-x-3">
+            <!-- search -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6 bg-white border rounded-full p-1 shadow-2xl hidden md:inline-block hover:scale-105 transition-all duration-300"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+              />
+            </svg>
+            <!-- shoping -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6 bg-white border rounded-full p-1 shadow-2xl hidden md:inline-block hover:scale-105 transition-all duration-300"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+              />
+            </svg>
+
+            <div class="bg-[#ABEF6F] flex items-center px-2 rounded-full">
+              <a
+                class="font-semibold text-[18px]  py-1 text-center"
+                >Book Consult</a
+              >
+              <img
+                src="assets/arrow-up.png"
+                class="w-5 h-5 bg-[#e9e259] ml-1 rounded-full p-1"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- main start -->
     <main></main>
     <!-- footer start -->
