--- a/index.html
+++ b/index.html
@@ -182,6 +182,93 @@
           </div>
         </div>
       </section>
+      <!-- design section -->
+      <section class="md:mt-10 mt-5 bg-[#FAFAFA] md:p-5 p-2">
+        <div class="container mx-auto md:flex md:justify-between">
+          <!-- text content -->
+          <div class="w-full md:w-[49%]">
+            <svg
+              width="126.559448"
+              height="43.214111"
+              viewBox="0 0 126.559 43.2141"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              class="hidden md:inline-block"
+            >
+              <desc>Created with Pixso.</desc>
+              <defs />
+              <path
+                id="Vector 14"
+                d="M0.74 13.74C0.74 13.74 15.91 -3.03 33.29 1.67C46.69 5.3 58.06 18.27 53.48 28.71C52.08 31.9 46.73 36.94 41.06 34.85C35.75 32.9 35.43 27.36 35.69 23.91C36.76 9.54 55.57 5.62 69.29 10.03C81.09 13.83 91.28 24.87 86.88 36.46C85.45 40.22 82.22 42.14 77.69 41.36C73.27 40.59 71.76 36.75 71.69 32.27C71.42 16.52 96.88 11.55 109.2 18.28C118.87 23.57 124.75 41.31 124.75 41.31M125.55 31.72L124.75 41.31L117.45 35.77"
+                stroke="#212121"
+                stroke-opacity="1.000000"
+                stroke-width="2.000000"
+                stroke-dasharray="5 5"
+              />
+            </svg>
+            <div class="md:ml-24">
+              <div
+                class="flex items-center font-bold bg-white mb-4 mt-5 w-[127px] p-2 rounded-full shadow-lg hover:scale-110 transition-all duration-300"
+              >
+                <img
+                  src="assets/arrow-beside.png"
+                  alt="arrow"
+                  class="w-4 h-3 mr-2"
+                />
+                <p class="font-bold">About us</p>
+              </div>
+              <div>
+                <h3 class="font-bold text-4xl">
+                  We design thoughtful, <br />
+                  liveable spaces
+                </h3>
+                <p class="mt-3">
+                  The barn house captivates with its blend of rustic charm and
+                  modern sophistication, featuring weathered wood, sleek metal
+                  accents.
+                </p>
+                <div
+                  class="bg-white md:px-5 px-2 py-2 md:py-3 flex items-center gap-8 shadow-2xl hover:translate-y-3 transition-all duration-300 md:mt-6 mt-3 rounded-lg"
+                >
+                  <div class="mt-6">
+                    <img src="assets/commercial.png" alt="" />
+                  </div>
+                  <div>
+                    <h3 class="font-extrabold text-xl space-y-2">Commercial</h3>
+                    <p class="font-medium text-[#737373]">
+                      The barn house captivates with its blend of rustic charm
+                      and modern.
+                    </p>
+                  </div>
+                </div>
+
+                <div
+                  class="bg-white md:px-5 px-2 py-2 md:py-3 flex items-center gap-8 shadow-2xl hover:translate-y-3 transition-all duration-300 md:mt-6 mt-3 rounded-lg"
+                >
+                  <div class="mt-6">
+                    <img src="assets/residential.png" alt="" />
+                  </div>
+                  <div>
+                    <h3 class="font-extrabold text-xl space-y-2">
+                      Residential
+                    </h3>
+                    <p class="font-medium text-[#737373]">
+                      The barn house captivates with its blend of rustic charm
+                      and modern.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- img content -->
+          <div class="w-full md:w-[49%] p-3">
+            <img src="assets/Rectangle.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer start -->
     <footer></footer>
