added this design section

--- a/index.html
+++ b/index.html
@@ -269,6 +269,10 @@
           </div>
         </div>
       </section>
+      <!-- process section -->
+       <section>
+        
+       </section>
     </main>
     <!-- footer start -->
     <footer></footer>
