added this process seciton

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body class="font-manrope">
     <!-- header start -->
     <header>
       <!-- navbar section -->
@@ -270,9 +270,132 @@
         </div>
       </section>
       <!-- process section -->
-       <section>
-        
-       </section>
+      <section class="md:mt-10 mt-5 md:p-5 p-2 bg-[#FAFAFA]">
+        <div
+          class="flex items-center font-bold bg-white mb-4 mt-5 w-[165px] p-2 rounded-full shadow-lg hover:scale-110 transition-all duration-300 container mx-auto"
+        >
+          <img src="assets/arrow-beside.png" alt="arrow" class="w-4 h-3 mr-2" />
+          <p class="font-bold">How we works</p>
+        </div>
+        <div class="container mx-auto text-center">
+          <h2 class="font-bold text-5xl">Our Works Process</h2>
+          <p
+            class="font-medium mt-3 md:mt-6 text-[#494949] w-full md:w-[600px] mx-auto"
+          >
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+        <!-- 4 cards -->
+        <div
+          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-8"
+        >
+          <div
+            class="space-y-3 bg-[#E7C1D3] p-4 rounded-lg h-[170px] flex flex-col justify-center hover:scale-105 transition-all duration-300 hover:bg-[#dec4d0]"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-8"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18"
+              />
+            </svg>
+            <h3 class="font-extrabold text-xl text-[#1C1C1C]">Consept</h3>
+            <p class="font-medium text-[#494949]">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div
+            class="space-y-3 bg-[#EFDA6E] p-4 rounded-lg h-[170px] flex flex-col justify-center hover:scale-105 transition-all duration-300 hover:bg-[#f1df85]"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-8"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 12h3.75M9 15h3.75M9 18h3.75m3 .75H18a2.25 2.25 0 0 0 2.25-2.25V6.108c0-1.135-.845-2.098-1.976-2.192a48.424 48.424 0 0 0-1.123-.08m-5.801 0c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75 2.25 2.25 0 0 0-.1-.664m-5.8 0A2.251 2.251 0 0 1 13.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C9.095 4.01 8.25 4.973 8.25 6.108V8.25m0 0H4.875c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V9.375c0-.621-.504-1.125-1.125-1.125H8.25ZM6.75 12h.008v.008H6.75V12Zm0 3h.008v.008H6.75V15Zm0 3h.008v.008H6.75V18Z"
+              />
+            </svg>
+
+            <h3 class="font-extrabold text-xl text-[#1C1C1C]">
+              Design Process
+            </h3>
+            <p class="font-medium text-[#494949]">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div
+            class="space-y-3 bg-[#A4DAC3] p-4 rounded-lg h-[170px] flex flex-col justify-center hover:scale-105 transition-all duration-300 hover:bg-[#b4e0cd]"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-8"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+              />
+            </svg>
+
+            <h3 class="font-extrabold text-xl text-[#1C1C1C]">Supervision</h3>
+            <p class="font-medium text-[#494949]">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+          <div
+            class="space-y-3 bg-[#77AAEA] p-4 rounded-lg h-[170px] flex flex-col justify-center hover:scale-105 transition-all duration-300 hover:bg-[#8aabd4]"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m20.893 13.393-1.135-1.135a2.252 2.252 0 0 1-.421-.585l-1.08-2.16a.414.414 0 0 0-.663-.107.827.827 0 0 1-.812.21l-1.273-.363a.89.89 0 0 0-.738 1.595l.587.39c.59.395.674 1.23.172 1.732l-.2.2c-.212.212-.33.498-.33.796v.41c0 .409-.11.809-.32 1.158l-1.315 2.191a2.11 2.11 0 0 1-1.81 1.025 1.055 1.055 0 0 1-1.055-1.055v-1.172c0-.92-.56-1.747-1.414-2.089l-.655-.261a2.25 2.25 0 0 1-1.383-2.46l.007-.042a2.25 2.25 0 0 1 .29-.787l.09-.15a2.25 2.25 0 0 1 2.37-1.048l1.178.236a1.125 1.125 0 0 0 1.302-.795l.208-.73a1.125 1.125 0 0 0-.578-1.315l-.665-.332-.091.091a2.25 2.25 0 0 1-1.591.659h-.18c-.249 0-.487.1-.662.274a.931.931 0 0 1-1.458-1.137l1.411-2.353a2.25 2.25 0 0 0 .286-.76m11.928 9.869A9 9 0 0 0 8.965 3.525m11.928 9.868A9 9 0 1 1 8.965 3.525"
+              />
+            </svg>
+
+            <h3 class="font-extrabold text-xl text-[#1C1C1C]">
+              Budget Planning
+            </h3>
+            <p class="font-medium text-[#494949]">
+              The barn house captivates with its blend of rustic charm and
+              modern.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer start -->
     <footer></footer>
