--- a/index.html
+++ b/index.html
@@ -396,6 +396,99 @@
           </div>
         </div>
       </section>
+      <!-- Our Latest Portfolio -->
+      <section class="container mx-auto md:mt-10 mt-5 md:p-5 p-2">
+        <div
+          class="flex items-center font-bold bg-[#ABEF5F33] mb-4 mt-5 w-[246px] p-2 rounded-full shadow-lg hover:scale-110 transition-all duration-300 mx-auto"
+        >
+          <img src="assets/arrow-beside.png" alt="arrow" class="w-4 h-3 mr-2" />
+          <p class="font-bold">Explore our lated work</p>
+        </div>
+        <div class="text-center">
+          <h2 class="text-5xl font-bold mt-3 md:mt-6">Our Latest Portfolio</h2>
+          <p
+            class="font-medium text-[#494949] mt-3 md:mt-5 w-full md:w-[670px] mx-auto"
+          >
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+
+        <div class="md:flex md:items-center gap-5 mt-3 md:mt-6">
+          <div
+            class="md:flex md:items-center gap-4 border p-4 hover:scale-105 transition-all duration-300 rounded-lg hover:bg-gray-100"
+          >
+            <div>
+              <img src="assets/img1.png" alt="" class="w-full mt-6 md:mt-0" />
+            </div>
+            <div>
+              <h3 class="text-2xl font-extrabold">Commercial</h3>
+              <p class="text-[#737373] font-medium mt-3 md:mt-6">
+                The barn house captivates with its blend of rustic charm and
+                modern. The barn house captivates with its blend of rustic charm
+                and modern .
+              </p>
+              <div class="flex items-center mt-3 md:mt-6">
+                <h3 class="text-xl font-bold">View Details</h3>
+                <img
+                  src="assets/arrow-up.png"
+                  class="w-5 h-5 bg-[#ABEF5F] ml-1 rounded-full p-1"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="border p-4 hover:scale-105 transition-all duration-300 rounded-lg hover:bg-gray-100 mt-6 md:mt-0"
+          >
+            <img src="assets/img2.png" alt="" class="w-full md:p-5 p-2" />
+          </div>
+        </div>
+        <div class="mt-3 md:flex gap-4">
+          <div class="w-full md:w-[25%]">
+            <div
+              class="border p-4 hover:scale-105 transition-all duration-300 rounded-lg hover:bg-gray-100 mt-6 md:mt-0"
+            >
+              <img src="assets/img3.png" alt="" class="w-full" />
+            </div>
+          </div>
+
+          <div class="w-full md:w-[50%]">
+            <div
+              class="md:flex md:items-center gap-4 border p-4 hover:scale-105 transition-all duration-300 rounded-lg hover:bg-gray-100"
+            >
+              <div>
+                <img src="assets/img4.png" alt="" class="w-full" />
+              </div>
+              <div>
+                <h3 class="text-2xl font-extrabold">Commercial</h3>
+                <p class="text-[#737373] font-medium mt-3 md:mt-6">
+                  The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+                <div class="flex items-center mt-3 md:mt-6">
+                  <h3 class="text-xl font-bold">View Details</h3>
+                  <img
+                    src="assets/arrow-up.png"
+                    class="w-5 h-5 bg-[#ABEF5F] ml-1 rounded-full p-1"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="md:w-[25%] w-full">
+            <div
+              class="border p-4 hover:scale-105 transition-all duration-300 rounded-lg hover:bg-gray-100 mt-6 md:mt-0"
+            >
+              <img src="assets/img5.png" alt="" class="w-full" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer start -->
     <footer></footer>
