--- a/index.html
+++ b/index.html
@@ -489,8 +489,118 @@
           </div>
         </div>
       </section>
+      <!-- next project section -->
+      <section class="md:mt-10 mt-5 bg-gray-300 p-4">
+
+        <div class="container mx-auto">
+          <div
+            class="flex items-center font-bold bg-[#ABEF5F33] mb-4 mt-5 w-[156px] p-2 rounded-full shadow-lg hover:scale-110 transition-all duration-300 mx-auto"
+          >
+            <img
+              src="assets/arrow-beside.png"
+              alt="arrow"
+              class="w-4 h-3 mr-2"
+            />
+            <p class="font-bold">Let’s Connect</p>
+          </div>
+          <div>
+            <h3 class="text-3xl font-bold text-[#212121] text-center">
+              Let’s Discuss Next Project
+            </h3>
+            <p
+              class="font-medium text-[#494949] text-center mt-4 w-full md:w-[670px] mx-auto"
+            >
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, featuring weathered wood, sleek metal
+              accents.
+            </p>
+          </div>
+          <form action="#" class="mt-3 md:mt-6">
+            <div
+              class="md: flex md:items-center md:justify-center gap-3 mx-auto"
+            >
+              <input
+                type="text"
+                autocomplete="given-name"
+                class="block w-full md:w-[30%] rounded-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"
+                placeholder="First-name"
+              />
+              <input
+                type="text"
+                autocomplete="given-name"
+                class="block w-full md:w-[30%] rounded-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"
+                placeholder="Last-name"
+              />
+            </div>
+
+            <div
+              class="md: flex items-center justify-center gap-3 mt-4 mx-auto"
+            >
+              <input
+                type="phone"
+                autocomplete="given-name"
+                class="block w-full md:w-[30%] rounded-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"
+                placeholder="Phone Number"
+              />
+              <input
+                type="email"
+                autocomplete="given-name"
+                class="block w-full md:w-[30%] rounded-full border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6 p-2"
+                placeholder="E-mail"
+              />
+            </div>
+            <div class="mt-3 mx-auto flex items-center justify-center">
+              <textarea id="about" name="about" rows="3" class="block w-full md:w-[60%] rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6"></textarea>
+            </div>
+            </div>
+            <div
+              class="bg-[#ABEF6F] flex items-center mx-auto mt-5 px-2 rounded-full w-full md:w-[50%] hover:scale-105 transition-all duration-300 hover:bg-[#7dad53] hover:text-white"
+            >
+              <a class="font-semibold text-[18px] py-1 mx-auto text-center"
+                >Send Mail</a
+              >
+              <img
+                src="assets/arrow-up.png"
+                class="w-5 h-5 bg-[#e9e259] ml-1 rounded-full p-1"
+                alt=""
+              />
+            </div>
+          </form>
+        </div>
+      </section>
     </main>
     <!-- footer start -->
-    <footer></footer>
+    <footer class="md:mt-10 bg-black mt-5 p-4">
+      <div class="flex items-center justify-center container mx-auto mt-5 pt-4 md:pt-10">
+        <img
+          src="assets/arrow-up.png"
+          class="w-5 h-5 bg-[#ABEF6F] rounded-full p-1 hidden md:inline-block"
+          alt=""
+        />
+
+        <a class="btn btn-ghost font-bold text-2xl text-white">Rinterio</a>
+      </div>
+      <p class="w-full md:w-[670px] text-[#737373] mx-auto text-center mt-4 font-medium ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      <div class="mt-5 md:flex  md:justify-center md:items-center gap-20 text-white font-medium text-center space-y-5">
+<div><a href="#">Home</a></div>
+<div><a href="#">Sevices</a></div>
+<div><a href="#">Portfolio</a></div>
+<div><a href="#">Blogs</a></div>
+<div><a href="#">Contact us</a></div>
+      </div>
+      <div
+      class="bg-[#ABEF6F] flex items-center mt-5 w-full justify-center mx-auto md:w-[212px]  px-2 rounded-full hover:scale-105 transition-all duration-300 hover:bg-[#7dad53] hover:text-white"
+    >
+      <a class="font-semibold text-[18px] py-1 text-center"
+        >Book Consult</a
+      >
+      <img
+        src="assets/arrow-up.png"
+        class="w-5 h-5 bg-[#e9e259] ml-1 rounded-full p-1"
+        alt=""
+      />
+    </div>
+    <div class="pb-5"></div>
+    </footer>
   </body>
 </html>
